prep for spring 2010 classes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ if (typeof jQuery == 'undefined')
 <script type="text/javascript" src='jquery.scrollFollow.js'></script>
 <script type="text/javascript" src='jquery.print.js'></script>
 <script type="text/javascript" src='jquery.qtip.js'></script>
-<script type="text/javascript" src='classes.js'></script>
+<script type="text/javascript" src='spring_2010.js'></script>
 <script type="text/javascript" src='main.js'></script>
 </head>
 
